--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
 body {
     margin: 0;
     font-family: 'Instrument Serif', serif;
@@ -13,6 +26,8 @@ body {
     height: 100px;        
     display: flex;       
     align-items: center;
+    background-image: url("/media/floral.png");
+
   }
   
   .scrolling-text {
@@ -23,10 +38,101 @@ body {
     -webkit-text-stroke: 1px black;
     font-style: italic;
   }
-  
-  video {
+
+  .video-container {
+    overflow: hidden;
+  }
+
+  #childhood-video {
     width: 100%;  
-    height: auto; 
+    height: 100%; 
     object-fit: cover;   
     z-index: -1;  
+    position: absolute;
   }
+
+  .overlay {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    display: flex;
+  }
+
+  .bar {
+    width: 10vw;
+    height: 105vh;
+    background-image: url("/media/bar.png");
+  }
+
+  .text-overlay {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 10;
+  }
+
+
+  .bahay-title {
+    font-size: clamp(7rem, 9vw, 9rem);
+    color: #f3e3b8;
+    background-color: rgba(226, 192, 98, 0.25);
+    text-shadow: 5px 5px rgb(39, 32, 2);
+    margin: 0;
+  }
+
+  .bahay-text {
+    font-size: clamp(1rem, 2.5vw, 2rem);
+    font-size: 2rem;
+    background-color: rgba(226, 192, 98, 0.75);
+  }
+
+#flower-img {
+    align-items: center;
+    width: 25%;
+    height: auto;
+}
+
+.scroll-container {
+  position: absolute;
+  bottom: 20px; /* Adjust to place the text and arrow at the bottom */
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  z-index: 10;
+}
+
+.scroll-text,
+.arrow-container {
+  opacity: 0; /* Initially hidden */
+  visibility: hidden;
+}
+
+.scroll-text {
+  font-size: 2rem;
+  color: white;
+  margin: 0;
+}
+
+.arrow-container {
+  margin-top: 10px;
+  font-size: 3rem;
+  color: white;
+}
+
+.arrow {
+  display: inline-block;
+  animation: bounce 1s infinite alternate;
+}
+
+/* Keyframes for arrow bounce animation */
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
+}
