--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,30 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.section {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
 
 body {
     margin: 0;
     font-family: 'Instrument Serif', serif;
-    overflow: hidden; /* prevents scrollbar */
+    overflow-x: hidden;
   }
+
+.section {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
   
   /* styling the container to hide overflow */
-  .text-container {
+.text-container {
     white-space: nowrap;
     overflow: hidden;   
     position: relative;
-    width: 100%;      
+    width: auto;      
     height: 100px;        
     display: flex;       
     align-items: center;
     background-image: url("/media/floral.png");
-
   }
   
-  .scrolling-text {
+.scrolling-text {
     display: inline-block;
     font-size: 5rem;
     color: #E2C062;
@@ -39,19 +33,19 @@ body {
     font-style: italic;
   }
 
-  .video-container {
+.video-container {
     overflow: hidden;
   }
 
-  #childhood-video {
-    width: 100%;  
-    height: 100%; 
+#childhood-video {
+    width: 100vw;  
+    height: 100vh; 
     object-fit: cover;   
     z-index: -1;  
     position: absolute;
   }
 
-  .overlay {
+.overlay {
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -59,14 +53,14 @@ body {
     display: flex;
   }
 
-  .bar {
+.bar {
     width: 10vw;
     height: 105vh;
     background-image: url("/media/bar.png");
   }
 
-  .text-overlay {
-    position: absolute;
+.text-overlay {
+    position: fixed;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -74,19 +68,25 @@ body {
     z-index: 10;
   }
 
+  .bahay-container {
+    margin-top: 20%;
+    background-image: url("/media/floral.png");
+    text-align: center;
+    
+}
 
-  .bahay-title {
+.bahay-title {
     font-size: clamp(7rem, 9vw, 9rem);
+    font-style: italic;
     color: #f3e3b8;
-    background-color: rgba(226, 192, 98, 0.25);
     text-shadow: 5px 5px rgb(39, 32, 2);
-    margin: 0;
+    
   }
 
-  .bahay-text {
+.bahay-text {
     font-size: clamp(1rem, 2.5vw, 2rem);
     font-size: 2rem;
-    background-color: rgba(226, 192, 98, 0.75);
+    font-style: italic;
   }
 
 #flower-img {
@@ -127,7 +127,6 @@ body {
   animation: bounce 1s infinite alternate;
 }
 
-/* Keyframes for arrow bounce animation */
 @keyframes bounce {
   0% {
     transform: translateY(0);
@@ -136,3 +135,24 @@ body {
     transform: translateY(10px);
   }
 }
+
+.section-2 {
+    display: flex; 
+    height: 100vh;
+    overflow: hidden;
+    background-image: url("/media/background-img.png");
+}
+
+.image-marquee {
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.marquee-image {
+    width: 33vw;
+    opacity: 0; 
+    transform: translateY(100px); 
+}
+
