--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     font-family: 'Instrument Serif', serif;
@@ -39,7 +38,7 @@ body {
 
 #childhood-video {
     width: 100vw;  
-    height: 100vh; 
+    height: 91vh; 
     object-fit: cover;   
     z-index: -1;  
     position: absolute;
@@ -137,22 +136,47 @@ body {
 }
 
 .section-2 {
-    display: flex; 
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
     height: 100vh;
     overflow: hidden;
     background-image: url("/media/background-img.png");
 }
 
-.image-marquee {
-    display: flex;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
+
+.childhood-text {
+    font-family: cursive;
+    font-size: 4rem;
+    color: #312A00;
 }
 
-.marquee-image {
+.c1 {
+    text-align: left;
+    margin: 20px auto 10px; 
+    padding-left: 5%;     
+    width: 90%;    
+    padding-bottom: 2.5%;       
+}
+
+.c2 {
+    text-align: right;
+    margin: 10px auto 20px; 
+    padding-right: 5%;     
+    padding-top: 2.5%; 
+    width: 90%;        
+}
+
+
+.childhood-image {
     width: 33vw;
-    opacity: 0; 
-    transform: translateY(100px); 
+    height: 33vh;
 }
 
+.image-container {
+    display: flex; 
+    position: relative;
+    justify-content: space-between; 
+    justify-content: center;
+}
